[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/ForgotPassword.gd" type="Script" id=1]
[ext_resource path="res://Scenes/MailSender.gd" type="Script" id=2]
[ext_resource path="res://assets/font/font_small.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/themes/minimalUI/MinimalUI.tres" type="Theme" id=4]
[ext_resource path="res://assets/font/BAARS.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://assets/font/font_super_small.tres" type="DynamicFont" id=6]
[ext_resource path="res://Games/StoneAge/assets/new_map_bg_blur.jpg" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 5 )

[node name="ForgotPassword" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.403922, 0.403922, 0.403922, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true

[node name="ForgotPanel" type="Panel" parent="."]
margin_left = 270.0
margin_top = 39.0
margin_right = 562.0
margin_bottom = 355.0
theme = ExtResource( 4 )

[node name="Label_error" type="Label" parent="ForgotPanel"]
modulate = Color( 1, 0, 0, 1 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -17.0
margin_bottom = 19.0
align = 1

[node name="VBox" type="VBoxContainer" parent="ForgotPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
custom_constants/separation = 7

[node name="Label" type="Label" parent="ForgotPanel/VBox"]
margin_right = 252.0
margin_bottom = 23.0
text = "Recuperar Clave"
align = 1

[node name="name" type="LineEdit" parent="ForgotPanel/VBox"]
margin_top = 30.0
margin_right = 252.0
margin_bottom = 67.0
focus_next = NodePath("../pass")
max_length = 50
placeholder_text = "Nombre o Mail"

[node name="btn_send_code" type="Button" parent="ForgotPanel/VBox"]
margin_top = 74.0
margin_right = 252.0
margin_bottom = 114.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 3 )
text = "ENVÍAME UN CÓDIGO"

[node name="code" type="LineEdit" parent="ForgotPanel/VBox"]
margin_top = 121.0
margin_right = 252.0
margin_bottom = 158.0
focus_next = NodePath("../pass")
max_length = 10
placeholder_text = "Código Verificador"

[node name="pass" type="LineEdit" parent="ForgotPanel/VBox"]
margin_top = 165.0
margin_right = 252.0
margin_bottom = 202.0
focus_next = NodePath("../btn_send_code")
max_length = 10
secret = true
placeholder_text = "Nueva Clave"

[node name="btn_change_pass" type="Button" parent="ForgotPanel/VBox"]
margin_top = 209.0
margin_right = 252.0
margin_bottom = 238.0
custom_colors/font_color = Color( 0.419608, 0.580392, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Cambiar Clave!"

[node name="btn_back" type="Button" parent="ForgotPanel"]
margin_left = 261.0
margin_top = -7.0
margin_right = 301.0
margin_bottom = 23.0
text = "X"

[node name="HelpPanel" type="ColorRect" parent="."]
margin_left = 575.0
margin_top = 77.0
margin_right = 789.0
margin_bottom = 338.0
color = Color( 0, 0, 0, 0.415686 )

[node name="Label_detail" type="Label" parent="HelpPanel"]
modulate = Color( 0.772549, 0.772549, 0.772549, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_right = -12.0
custom_constants/line_spacing = 5
custom_fonts/font = ExtResource( 6 )
text = "
1- Escribe tu NOMBRE o tu EMAIL

2- Presiona el boton \"ENVIAME UN CÓDIGO\"

3- Revisa tu mail, deberá llegarte un código de verificación (revisa el spam por las dudas)

4- Escribe el código de verificación que recibiste por mail

5- Escribe la nueva clave que quieres para tu cuenta

6- Presiona el boton \"Cambiar Clave!\""
autowrap = true

[node name="float_message" type="ColorRect" parent="."]
margin_right = 453.0
margin_bottom = 54.0
rect_min_size = Vector2( 50, 50 )
color = Color( 0, 0, 0, 0.862745 )

[node name="Label" type="Label" parent="float_message"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 17.0
margin_right = -13.0
custom_colors/font_color = Color( 0.968627, 1, 0.392157, 1 )
custom_fonts/font = ExtResource( 3 )
text = "CLAVE INCORRECTA"
align = 1
valign = 1
autowrap = true

[node name="MailSender" type="HTTPRequest" parent="."]
script = ExtResource( 2 )
